--- a/style.css
+++ b/style.css
@@ -3104,5 +3104,63 @@ textarea {
   }
   /*** HOME END ***/
 }
+@media screen and (min-width: 1100px) {
+  /*** HOME START ***/
+
+  #home {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    padding: 50px 40px;
+    padding-top: 120px;
+  }
+  #home-part--1 {
+    height: 100%;
+    width: 65%;
+  }
+  #home-part--1 h1 {
+    margin-bottom: 25px;
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 200;
+    word-spacing: 1.5px;
+    color: var(--primary-blue);
+    text-shadow: var(--text-shadow);
+  }
+  #home-part--1 h3 {
+    margin-bottom: 30px;
+    font-size: 18px;
+    font-weight: 100;
+    word-spacing: 2px;
+    line-height: 24px;
+  }
+  #home-part--1 h3 span.internal-problem {
+    color: white;
+    font-size: 19px;
+    font-weight: 900;
+  }
+  #home-part--1 h3 a {
+    color: var(--primary-blue);
+    font-weight: 600;
+    font-size: 20px;
+  }
+  #home-part--1 #contactBtn a button {
+    padding: 8px 16px;
+    font-size: 44px;
+    cursor: pointer;
+    display: inline-block;
+  }
+  #home-part--2 {
+    height: 100%;
+    width: 25%;
+  }
+  #home-part--2 img {
+    height: 400px;
+    width: 350px;
+    object-fit: cover;
+    margin-left: 80px;
+  }
+  /*** HOME END ***/
+}
 
 /*** RESPONSIVE LAYOUT END ***/
