--- a/style.css
+++ b/style.css
@@ -893,6 +893,11 @@ textarea {
   font-size: 30px;
   font-weight: 900;
 }
+#standard-price h4 span.cut {
+  text-decoration: line-through;
+  font-size: 20px;
+  font-weight: 100;
+}
 #standard-price #contactBtn a button {
   margin-top: 20px;
   font-size: 48px;
