--- a/style.css
+++ b/style.css
@@ -165,11 +165,10 @@ h6 {
   transition: 0.3s opacity linear;
 }
 .logo img {
-  height: 70px;
-  width: 70px;
-  object-fit: cover;
+  height: 90px;
+  width: 100px;
+  object-fit: contain;
   object-position: center;
-  border-radius: 50%;
 }
 #navbar-active {
   display: none;
@@ -313,10 +312,15 @@ h6 {
   background-color: var(--primary-blue);
   color: #fff;
   padding: 50px 0;
+  padding-top: 20px;
   text-align: center;
   font-size: 14px;
 }
-
+.footer a img {
+  height: 100px;
+  width: 110px;
+  object-fit: contain;
+}
 .footer h1 {
   font-size: 28px;
   font-weight: 300;
